Update api generated files
