# go/model_user.go
@@ -1,0 +1,36 @@
+/*
+ * GreekSchools Data Service API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type User struct {
+
+	Name string `json:"name,omitempty"`
+
+	Lastname string `json:"lastname,omitempty"`
+
+	Email string `json:"email,omitempty"`
+}
+
+// AssertUserRequired checks if the required fields are not zero-ed
+func AssertUserRequired(obj User) error {
+	return nil
+}
+
+// AssertRecurseUserRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of User (e.g. [][]User), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseUserRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aUser, ok := obj.(User)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertUserRequired(aUser)
+	})
+}
